--- a/lectures/06-sfi.tex
+++ b/lectures/06-sfi.tex
@@ -6,7 +6,7 @@
 \newcommand{\leccourse}{Software Foundations of Security and Privacy}
 \newcommand{\lecdate}{} %e.g. {October 21, 2013}
 \newcommand{\lecnum}{6}
-\newcommand{\lectitle}{Memory Safety \& Software Fault Isolation}
+\newcommand{\lectitle}{Memory Safety \& Sandboxing}
 \newcommand{\lecturer}{Matt Fredrikson}
 \newcommand{\lecurl}{https://15316-cmu.github.io/index}
 
@@ -290,7 +290,7 @@ For any formula $\ausfml$ and program $\asprg$ that has been rewritten according
 The way to prove this is by induction on the structure of proofs, just as we did to prove the soundness of the propositional sequent calculus and will do to prove Theorem~\ref{thm:sfi-correctness} later in this lecture. This is a good exercise to complete on your own.
 \end{proof}
 
-\section{Software Fault Isolation}
+\section{Sandboxing memory access}
 Memory safety is an important policy in that we would want any useful program to be memory safe. But there are other sorts of safety policies on memory that we might want to enforce more selectively on only certain programs. For example, consider the following pseudocode that checks a configuration variable to determine whether or not to display and advertisement. If so, then the program runs $\asprg$ to render an ad on the screen.
 \[
 \pif{\textit{display ads}}{\asprg}{\textit{continue without ads}}
@@ -399,222 +399,7 @@ So taking stock of our language, we propose to do the following \emph{instrument
 \end{itemize}
 This seems pretty convincing. Our language is fairly simple, so we're pretty sure that all our bases our covered in terms of sandboxing $\asprg$. The assertions themselves are a straightforward reflection of our sandboxing policy.
 
-The downside to this type of enforcement is that any violation of the sandboxing policy, regardless of whether it is inadvertent or intentionally malicious, will cause our entire program to abort. This is less than ideal, as the malice or incompetence of $\asprg$'s developers still has a direct impact on the functioning of our code. Perhaps we can do better.
-
-\subsection{Isolating policy violations}
-Rather than checking whether memory accesses are safe and aborting if the check fails, perhaps we can force all untrusted accesses to be within the sandbox. In the diagram above, we use the specific sandbox policy $s_l=8, s_h=15$. Let us assume that our language operates over machine integers, so that the sandbox boundaries are the binary constants:
-\[
-s_l = \verb'0b1000', s_h = \verb'0b1111'
-\]
-So the range of valid sandbox addresses is \verb'0b1000', \verb'0b1001', \verb'0b1010', \ldots, \verb'0b1111'. Any valid address will have the fourth bit set, and all greater bits unset. Given an arbitrary term $\astrm$, we can use bitwise operations to force it to a value in this range:
-\begin{equation}
-\label{eq:sfiex}
-(\astrm \bitand \verb'0b1111') \bitor \verb'0b1000'
-\end{equation}
-From now on, we will use hexadecimal rather than binary when writing such constants, so Equation~\ref{eq:sfiex} becomes $(\astrm \bitand \verb'0xF') \bitor \verb'0x8'$. If we assume that our sandbox regions always comprise integral boundaries (i.e., \verb'0x0000'-\verb'0x00FF', \verb'0x0100'-\verb'0x01FF', \verb'0x0200'-\verb'0x02FF'), then we can generalize this to:
-\begin{equation}
-\label{eq:sfiex}
-(\astrm \bitand s_h) \bitor s_l
-\end{equation}
-With this in mind, we change the way we instrument programs.
-\begin{itemize}
-  \item Replace each command of the form $\pderef{\astrm}:=\bstrm$ with a new composed command:
-  \[
-  \pderef{(\astrm \bitand s_h) \bitor s_l}:=\bstrm
-  \]
-  This will ensure that $\asprg$ doesn't update any locations outside the sandbox.
-
-  \item For any command $\bsprg$ containing the term $\pderef{\astrm}$, replace $\pderef{\astrm}$ with $\pderef{(\astrm \bitand s_h) \bitor s_l}$.
-  This will ensure that $\asprg$ doesn't read any locations outside the sandbox.
-\end{itemize}
-This is called \emph{software fault isolation} (SFI).
-The benefit of this approach is that as long as the sandbox is configured correctly for the memory, so that
-\begin{equation}
-0 \le s_l \le s_h < \maxmem
-\end{equation}
-Then after instrumenting the untrusted program $\asprg$, we know that \emph{(1)} it will not violate the sandbox safety policy, and \emph{(2)} it will also be memory safe! 
-
-The semantics of the instrumented program will certainly differ from the original $\asprg$, in particular if it made unsafe memory accesses, and this may lead to bugs in the instrumented code that cause it to behave otherwise than expected. But this need not concern us, as our program will be completely isolated from the effect of these bugs.
-
-\paragraph{Correctness of write instrumentation.} But how do we know that the instrumented program will actually satisfy the sandbox safety policy? Before when we used $\passert{\ivr}$ commands, we might have gotten away with an informal argument because the correctness was totally obvious. But now our instrumentation does strange things with bitwise operators to force certain behaviors. We should really be more formal about this to make sure we didn't screw things up with a bad assumption.
-
-The question becomes, how do we formalize the correctness of our sandbox policy as a safety property? Before we reasoned that the ``bad thing'' is a certain type of event, i.e. a read or write to memory locations outside the sandbox. We don't know how to prove things about these sorts of events, because all of the properties we have looked at so far define bad things  directly in terms of state. Perhaps we can think in terms of the effect that violations will have on program state instead of the events that bring those effects into being.
-
-The first type of instrumentation purports to cover all write events. If $\asprg$ violates the policy by writing outside the sandbox, then the bad thing in terms of state would be that the contents of non-sandbox memory after $\asprg$ terminates differ from their contents prior to running $\asprg$. This sounds like something that we can formalize in dynamic logic using familiar properties, i.e. contracts.
-\begin{equation}
-\label{eq:sfi-integrity}
-\forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i \limply \dbox{\asprg}{\pderef{i}=v_i}
-\end{equation}
-But how can we prove this without knowing anything about what $\asprg$ is? We can reason inductively on the syntax of programs, which is what the proof of Theorem~\ref{thm:sfi-correctness} does.
-
-\begin{theorem}
-\label{thm:sfi-correctness}
-Let $\asprg$ be a program whose memory update commands have been instrumented as prescribed by software fault isolation. Then all valid memory indices outside the sandbox retain the same value after executing $\asprg$ as they had prior to executing it. In other words, Equation~\ref{eq:sfi-integrity} is valid.
-\end{theorem}
-\begin{proof}
-We will proceed by induction on the structure of $\asprg$. That is, we will show that for all of the simplest (base case) forms that $\asprg$ can take, the claim holds. Then we will use the inductive hypothesis for more complex forms of $\asprg$, showing that the claim holds whenever we assume that it does for any subprograms inside of $\asprg$. The inductive case thus covers all possible programs that can be constructed according to the syntax we introduced at the beginning of the lecture. This means that regardless of how $\asprg$ is implemented, the safety claim will hold.
-
-The base cases of this proof correspond to programs that contain no other program constituents, i.e. $x:=\astrm$, $\pderef{\astrm}:=\bstrm$, and $\passert{\ivr}$. The inductive cases are programs that contain other programs, i.e. $\asprg;\bsprg$, $\pif{\ivr}{\asprg}{\bsprg}$, and $\pwhile{\ivr}{\asprg}$. We will complete the most challenging base case to outline the form of the proofs of the others, and leave the remaining ones as an exercise. We will do the same for one inductive case, leaving the rest as an exercise.
-
-\paragraph{\textbf{Base case} $\pderef{\astrm}:=\bstrm$:} 
-The instrumentation will replace this command with: 
-\[
-  \pderef{(\astrm \bitand s_h) \bitor s_l}:=\bstrm
-\]
-Then the following sequent derivation demonstrates correctness. Note that we use \irref{allr}, which is detailed in the aside at the end of these notes.
-\begin{sequentdeduction}
-\linfer[allr] {
-  \linfer[implyr+andl] {
-    \linfer[mwrite] {
-      \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-    } {
-      \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i}{\dbox{\pderef{(\astrm \bitand s_h) \bitor s_l}:=\bstrm}{\pderef{i}=v_i}}
-    }
-  } {
-    \lsequent{}{\lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i \limply \dbox{\pderef{(\astrm \bitand s_h) \bitor s_l}:=\bstrm}{\pderef{i}=v_i}}
-  }
-} {
-  \lsequent{}{\forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i \limply \dbox{\pderef{(\astrm \bitand s_h) \bitor s_l}:=\bstrm}{\pderef{i}=v_i}}
-}
-\end{sequentdeduction}
-At this point we need to split into cases, because it could either be that $i = (\astrm \bitand s_h) \bitor s_l$ or $i \ne (\astrm \bitand s_h) \bitor s_l$. Depending on which case it is, we use \irref{mreadeq} or \irref{mreadneq}. We case split with the \irref{cut} rule. In the following, let
-\[
-P_1 \equiv i = (\astrm \bitand s_h) \bitor s_l, P_2 \equiv i \ne(\astrm \bitand s_h) \bitor s_l, P \equiv P_1 \lor P_2
-\]
-Then we continue with the proof as follows:
-\begin{sequentdeduction}
-\linfer[cut] {
-  \linfer[qmear] {\lclose} {\lsequent{}{P}}
-  &\ \ \linfer[orl] {
-    \textcircled{1}
-    &\textcircled{2}
-  } {
-    \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i,P}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-    % \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i,P}{Q}
-  }
-} {
-  \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-}
-\end{sequentdeduction}
-Continuing with subtree \textcircled{1}:
-\begin{sequentdeduction}
-\linfer[notl] {
-  \linfer[G] {
-    \linfer[qmear] {\lclose} {\lsequent{i = (\astrm \bitand s_h) \bitor s_l}{s_l \le i \le s_h}}
-  } {
-    \lsequent{\pderef{i}=v_i,i = (\astrm \bitand s_h) \bitor s_l}{s_l \le i \le s_h,\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-  }
-} {
-  \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i,i = (\astrm \bitand s_h) \bitor s_l}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-}
-\end{sequentdeduction}
-We used the generalization rule to reduce the obligation to a claim about machine arithmetic, namely:
-\begin{equation}
-i = (\astrm \bitand s_h) \bitor s_l \limply s_l \le i \le s_h
-\end{equation}
-The generalization rule is given below.
-\[
-\cinferenceRule[G|G]{$\dbox{}{}$ generalization} %|$gen$
-{\linferenceRule[formula]
-  {\lsequent{\Gamma_1}{\ausfml}}
-  {\lsequent{\Gamma_1,\Gamma_2}{\ausfml,\Delta}}
-}{}%
-\]
-Intuitively, all that \irref{G} says is that if we want to prove that either $P$ or $\Delta$ holds under assumptions $\Gamma_1,\Gamma_2$, then it suffices to prove that $P$ holds only assuming $\Gamma_1$. The statement $\lsequent{\Gamma_1}{P}$ is more general than $\lsequent{\Gamma_1,\Gamma_2}{P,\Delta}$, and in fact encompasses the cases where $\Gamma_2$ is also assumed or $\Delta$ is also true.
-
-Now we complete this case by deriving \textcircled{2}.
-\begin{sequentdeduction}
-\linfer[G] {
-  \linfer[cut] {
-    \linfer[mreadneq] {
-      \linfer[id]{\lclose}{\lsequent{\pderef{i}=v_i,i \ne (\astrm \bitand s_h) \bitor s_l}{i \ne (\astrm \bitand s_h) \bitor s_l}}
-      &\linfer{\vdots}{\lsequent{\pderef{i}=v_i,i \ne (\astrm \bitand s_h) \bitor s_l}{0 \le i < \maxmem}}
-    } {
-      \lsequent{\pderef{i}=v_i,i \ne (\astrm \bitand s_h) \bitor s_l}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=\pderef{i}}
-    }
-  } {
-    \lsequent{\pderef{i}=v_i,i \ne (\astrm \bitand s_h) \bitor s_l}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-  }
-} {
-  \lsequent{\lnot(s_l \le i \le s_h), \pderef{i}=v_i,i \ne (\astrm \bitand s_h) \bitor s_l}{\memupd{\pderefop}{(\astrm \bitand s_h) \bitor s_l}{\bstrm}(i)=v_i}
-}
-\end{sequentdeduction}
-The unfinished portion of the proof is covered by the theorem's claim: that all \emph{valid} memory indices remain the same. We chose not to formalize that indices are valid as an assumption, mainly to keep the proof less cluttered. But adding it and closing out this remaining branch is not difficult.
-
-\paragraph{Inductive case $\asprg;\bsprg$:}
-Suppose that the program is a composition of $\asprg$ and $\bsprg$. The inductive hypothesis lets us assume that:
-\begin{align}
-\forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i &\limply \dbox{\asprg}{\pderef{i}=v_i} \\
-\forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i &\limply \dbox{\bsprg}{\pderef{i}=v_i}
-\end{align}
-Then consider $(\omega,\ldots,\mu) \in \llbracket\asprg\rrbracket$ and $(\mu,\ldots,\nu) \in \llbracket\bsprg\rrbracket$. We have the following:
-\begin{align}
-\label{eq:trans1}
-\forall i . \lnot(s_l \le i \le s_h)  \land \omega_M(i)=v_i &\limply \mu_M(i)=v_i \\
-\label{eq:trans2}
-\forall i . \lnot(s_l \le i \le s_h)  \land \mu_M(i)=v_i &\limply \nu_M(i)=v_i
-\end{align}
-By the semantics of $\asprg;\bsprg$ and the transitive property of equality, it must be that for all $(\omega,\ldots,\nu)\in\llbracket\asprg;\bsprg\rrbracket$ it is the case that:
-\begin{equation}
-\label{eq:transc}
-\forall i . \lnot(s_l \le i \le s_h)  \land \omega_M(i)=v_i \limply \nu_M(i)=v_i
-\end{equation}
-Then (\ref{eq:transc}) and the semantics of $\dbox{\asprg;\bsprg}$ tell us that 
-\begin{equation}
-\forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i \limply \dbox{\asprg;\bsprg}{\pderef{i}=v_i}
-\end{equation}
-This completes the proof.
-
-\paragraph{Rest of the proof:}
-The remaining cases are left as exercises. The remaining base cases are easy to complete, because they correspond to program forms that do not affect the memory state at all. The inductive cases follow the form outlined for $\asprg;\bsprg$ above, using the inductive hypothesis as well as the semantics of programs and dynamic logic to conclude that whenever subprograms satisfy the sandbox policy, the larger programs that contain them do as well.
-\end{proof}
-So we have now concluded that software fault isolation prevents memory write operations from working outside the designated sandbox. What about read operations? The second form of instrumentation is applied to terms that read from the current memory state, and we expect that they will prevent programs from unauthorized reads for the same reasons that write operations are safe.
-
-\paragraph{Correctness of read instrumentation.}
-We based our proof of write operations on the fact that it can be formalized as a safety property over program state. We reasoned that if the instrumentation were not sufficient, then there would be evidence at the end of $\asprg$'s execution in the form of memory contents that were modified from their initial value. But can we say something similar about memory read operations? What evidence in the state will there be if the instrumentation is not correct, and $\asprg$ succeeds at reading a memory location outside the sandbox?
-
-We might say that if there was a successful read outside the sandbox, then one of the program variables, or perhaps one of the sandbox memory cells, will contain a value that was initially in the memory outside the sandbox. But this need not be the case, because what if $\asprg$ makes an unauthorized read, and then performs an operation in the result before storing it in a variable or memory? On the other hand, suppose that in $\asprg$'s final state, one of the variables \emph{did} take the same value as an unauthorized memory location. Are we certain that it took this value because of an unauthorized read, or could it be mere chance the $\asprg$ happened to compute a value that overlapped with outside memory?
-
-This question drives to a fundamental difference between safety and information flow properties. We've learned that safety properties can be viewed as collections of traces, so all that we need to do to reason about whether a program satisfies such a property is make sure all of its traces are in the property. This is what SFI accomplishes when it forces memory accesses to a particular range, because the property says that all traces must only make accesses within that range. Likewise, this is what we prove when we use dynamic logic sequent calculus deductions to reason about safety: that all terminating traces are in the set described by the property.
-
-But information flow properties are fundamentally different. They cannot be described as sets of traces, and in fact must consider what \emph{might} have happened on a different trace if some variable or memory location had taken a different value. To reason convincingly about the correctness of the read operations we need to be able to refer to and prove things about information flow properties, i.e. that information outside the sandbox does not flow into any of the variables or memory locations within the sandbox. This will be a topic of future lectures, where we will take a completely different approach to policy enforcement.
-
-\begin{figure}[p]
-\fbox{
-\begin{minipage}{\textwidth}
-\textbf{Aside}: Rules for quantifiers
-\\[1ex]
-Our proof of \textcircled{4} used a rule that we have not seen before: $\forall\rightrule$. The rule allows us to remove the quantifier, replacing the bound variable with a new variable that does not appear anywhere else in the sequent. This is equivalent to saying that if we can prove that $F(y)$ holds on some $y$ for which we make no prior assumptions, then we can conclude that it holds universally. The corresponding left rule ($\forall\leftrule$) says that if we can prove something assuming $F$ holds for a particular term, say $\astrm$, then we can prove it assuming that $F$ holds universally. Intuitively, we've only made our assumptions stronger by assuming that $F$ holds universally.
-\[
-\cinferenceRule[allr|$\forall$\leftrule]{forall left}
-{\linferenceRule[sequent]
-  {\lsequent{\Gamma,F(\astrm)}{{}\Delta}}
-  {\lsequent{\Gamma,\forall x.F(x)}{{}\Delta}}
-}{}
-\quad
-\cinferenceRule[allr|$\forall$\rightrule]{forall right}
-{\linferenceRule[sequent]
-  {\lsequent{\Gamma}{{}F(y),\Delta}}
-  {\lsequent{\Gamma}{{}\forall x.F(x),\Delta}}
-}{\text{$y$ new}}
-\]
-The rules for existential quantifiers are similar, but in this case, it is the left rule in which we need to be careful about renaming. Similarly to the $\forall\rightrule$, if we can use the fact that $F(y)$ holds to prove $\Delta$, and nothing in our assumptions or $\Delta$ mentions specific things about $y$, then we can conclude that the details of $y$ don't matter for the conclusion, and the only important fact is that some value establishing $F(y)$ exists. The $\exists\rightrule$ simply says that if we can prove that $F$ holds for term $\astrm$, then we can conclude that it must hold for some value, even if we leave the value unspecified.
-\[
-\cinferenceRule[existsr|$\exists$\leftrule]{exists left}
-{\linferenceRule[sequent]
-  {\lsequent{\Gamma,F(y)}{{}\Delta}}
-  {\lsequent{\Gamma,\exists x.F(x)}{{}\Delta}}
-}{\text{$y$ new}}
-\quad
-\cinferenceRule[existsr|$\exists$\rightrule]{exists right}
-{\linferenceRule[sequent]
-  {\lsequent{\Gamma}{{}F(\astrm),\Delta}}
-  {\lsequent{\Gamma}{{}\exists x.F(x),\Delta}}
-}{}
-\]
-\end{minipage}
-}
-\end{figure}
+The downside to this type of enforcement is that any violation of the sandboxing policy, regardless of whether it is inadvertent or intentionally malicious, will cause our entire program to abort. This is less than ideal, as the malice or incompetence of $\asprg$'s developers still has a direct impact on the functioning of our code. Perhaps we can do better. In the next lecture, we will see how to isolate the rest of our programs from these effects using software fault isolation.
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
