--- a/lectures/07-cfi.tex
+++ b/lectures/07-cfi.tex
@@ -324,7 +324,24 @@ Then (\ref{eq:transc}) and the semantics of $\dbox{\asprg;\bsprg}$ tell us that
 \begin{equation}
 \forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i \limply \dbox{\asprg;\bsprg}{\pderef{i}=v_i}
 \end{equation}
-This completes the inductive case for composition.
+This completes the inductive case for composition. 
+% In the following let $P \equiv \lnot(s_l \le i \le s_h),\pderef{i}=v_i$.
+% \begin{sequentdeduction}
+% \linfer[allr+implyr+andl+composeb] {
+%   \linfer[notl] {
+%     \linfer[Mbr] {
+%       \lsequent{\pderef{i}=v_i}{\dbox{\asprg}{\pderef{i}=v_i},s_l \le i \le s_h}
+%       &\lsequent{\lnot(s_l \le i \le s_h),\pderef{i}=v_i}{\dbox{\bsprg}{\pderef{i}=v_i}}
+%     } {
+%       \lsequent{\pderef{i}=v_i}{\dibox{\asprg}\dbox{\bsprg}{\pderef{i}=v_i},s_l \le i \le s_h}
+%     }
+%   } {
+%     \lsequent{\lnot(s_l \le i \le s_h),\pderef{i}=v_i}{\dibox{\asprg}\dbox{\bsprg}{\pderef{i}=v_i}}
+%   }
+% } {
+%   \lsequent{}{\forall i . \lnot(s_l \le i \le s_h)  \land \pderef{i}=v_i \limply \dbox{\asprg;\bsprg}{\pderef{i}=v_i}}
+% }
+% \end{sequentdeduction}
 
 \paragraph{Rest of the proof:}
 The remaining cases are left as exercises. The remaining base cases are easy to complete, because they correspond to program forms that do not affect the memory state at all. The inductive cases follow the form outlined for $\asprg;\bsprg$ above, using the inductive hypothesis as well as the semantics of programs and dynamic logic to conclude that whenever subprograms satisfy the sandbox policy, the larger programs that contain them do as well.
@@ -339,144 +356,6 @@ We might say that if there was a successful read outside the sandbox, then one o
 This question drives to a fundamental difference between safety and information flow properties. We've learned that safety properties can be viewed as collections of traces, so all that we need to do to reason about whether a program satisfies such a property is make sure all of its traces are in the property. This is what SFI accomplishes when it forces memory accesses to a particular range, because the property says that all traces must only make accesses within that range. Likewise, this is what we prove when we use dynamic logic sequent calculus deductions to reason about safety: that all terminating traces are in the set described by the property.
 
 But information flow properties are fundamentally different. They cannot be described as sets of traces, and in fact must consider what \emph{might} have happened on a different trace if some variable or memory location had taken a different value. To reason convincingly about the correctness of the read operations we need to be able to refer to and prove things about information flow properties, i.e. that information outside the sandbox does not flow into any of the variables or memory locations within the sandbox. This will be a topic of future lectures, where we will take a completely different approach to policy enforcement.
-
-
-\section{Indirect control flow}
-So far the programs that we have considered have a particularly nice property. Namely, once the programmer decides which commands are in the program and how they are sequenced together with compositions, conditionals, and while loops, then all of the possible sequences of commands that the program will ever execute are fixed once and for all. There is no way for a user to provide data that could cause some of the commands to be skipped over or added, and as long as the program is executed faithfully to the semantics, the control flow will be as the programmer envisioned when the program was written.
-
-Programs executed on ``real'' machines do not enjoy this property, thanks to indirect transfers of control flow. An indirect control flow transfer is commonly implemented using a function pointer in high-level languages, or a \verb'jmp' instruction with a pointer operand. We'll add this functionality to our language by considering a program command of the form:
-\begin{equation}
-\label{eq:ifjump}
-\pifjump{\ivr}{\astrm}
-\end{equation}
-The command in (\ref{eq:ifjump}) first tests whether a formula $\ivr$ is true in the current state. If it is, then control transfers to the instruction indexed by the term $\astrm$. Otherwise, control proceeds to the next instruction.
-
-But this doesn't make much since yet, because we haven't discussed indexing of instructions. Programs in the simple imperative language are themselves just commands, which can be built from other commands by connecting them with composition, conditional, and looping constructs. We will now change the language so that rather than having structured high-level commands like $\pif{\ivr}{\asprg}{\bsprg}$ and $\pwhile{\ivr}{\asprg}$, we will assume that programs are sequences of unstructured ``atomic'' commands. So the commands are defined by the syntax:
-\begin{equation*}
-  \asprg ~\bebecomes~
-  \pupdate{\pumod{x}{\astrm}}
-  \alternative
-  \pupdate{\pumod{\pderef{\astrm}}{\bstrm}}
-  \alternative
-  \passert{\ivr}
-  \alternative
-  \pifjump{\ivr}{\astrm}
-  \alternative
-  \phalt
-\end{equation*}
-Then a program $\Pi$ is a finite sequence of commands,
-\begin{equation}
-\Pi = (\asprg_0,\asprg_1,\ldots,\asprg_n)
-\end{equation}
-We will write $\Pi(i)$, where $0 \le i \le n$, to refer to the command $\asprg_i$ in program $\Pi$. If $i$ is negative, or $n < i$, then $\Pi(i)$ is undefined.
-
-Think of this language as a simplified version of assembly language. Memory update commands $\pumod{\pderef{\astrm}}{\bstrm}$ correspond to store instructions (i.e., \verb'mov' into a memory cell), memory dereference terms $\pderef{\astrm}$ correspond to memory fetch instructions (i.e., \verb'mov' from a memory cell to a register), and $\pifjump{\ivr}{\astrm}$ to conditional \verb'jmp' instructions. We don't have an explicit stack or notion of procedure to worry about, but if we did then $\phalt$ commands would correspond to \verb'ret' instructions.
-
-\paragraph{Semantics}
-Recall that program states $\omega$ are composed of a variable map $\omega_V$ and memory $\omega_M$. Now that programs $\Pi$ are composed of indexed commands, and can transfer control to any command in $\Pi$, states will also need to track a program counter $\omega_i$ that determines which command executes next. The program counter will range from $i \in 0$ to $n$, denoting that the command $\Pi_i$ executes next. We will also use the special program counter value $\varnothing$ to denote the ``empty'' program counter that occurs when a program terminates.
-
-\begin{definition}[Small-step transition semantics of programs]
-The small-step transition relation $\smallstep_\Pi$ of program $\Pi$ composed of commands $\asprg_0,\ldots,\asprg_n$ in state $\omega = (\omega_i,\omega_V,\omega_M)$ is given by the following cases:
-\[
-(\omega_i,\omega_V,\omega_M) \smallstep_\Pi
-\left\{
-\begin{array}{lcl}
-(\omega_i+1, \memupd{\omega_V}{x}{\omega\llbracket\astrm\rrbracket}, \omega_M) & \textit{if} & \Pi_i = \pumod{x}{\astrm}~\text{and}~\omega\llbracket\astrm\rrbracket~\text{is defined}
-
-\\
-
-(\omega_i+1, \omega_V, \memupd{\omega_M}{\omega\llbracket\astrm\rrbracket}{\omega\llbracket\bstrm\rrbracket}) & \textit{if} & \Pi_i = \pumod{\pderef{\astrm}}{\bstrm}~\text{and} \\
- & & \omega\llbracket\bstrm\rrbracket~\text{is defined}~\text{and}~0\le\astrm<\maxmem
-
-\\
-
-(\omega_i+1, \omega_V, \omega_M) & \textit{if} & \Pi_i = \passert{\ivr}~\text{and}~\omega\models\ivr
-
-\\
-
-(\omega\llbracket\astrm\rrbracket, \omega_V, \omega_M) & \textit{if} & \Pi_i = \pifjump{\ivr}{\astrm}~\text{and} \\
- & & 0 \le \omega\llbracket\astrm\rrbracket \le n~\text{and}~\omega\models\ivr
-
-\\
-
-(\omega_i+1, \omega_V, \omega_M) & \textit{if} & \Pi_i = \pifjump{\ivr}{\astrm}~\text{and}~ \\
- & & 0 \le \omega\llbracket\astrm\rrbracket \le n~\text{and}~\omega\models\lnot\ivr
-
-\\
-
-(\emptyset, \omega_V, \omega_M) & \textit{if} & \Pi_i = \phalt
-
-\\
-
-\errstate & \textit{if} & \text{otherwise}
-
-\end{array}
-\right.
-\]
-\end{definition}
-
-Having defined the small-step transition semantics, we can define the trace semantics as all sequences of states $\omega_1, \omega_2, \ldots$ that either terminate in a state $\omega_n=(\emptyset,\omega_V,\omega_M)$, diverge (i.e. terminate in no state and run forever), or abort by terminating in $\omega = \errstate$.
-
-\begin{definition}[Trace semantics]
-Given a program $\Pi$ composed of commands $\asprg_0,\ldots,\asprg_n$, the trace semantics $\llbracket\Pi\rrbracket$ is the set of traces obtainable by repeated application of the small-step relation $\smallstep_\Pi$.
-\[
-\llbracket\Pi\rrbracket =
-\{
-(\omega_0,\omega_1,\ldots) \with \omega_{i} \smallstep_\Pi \omega_{i+1}~\text{for all indices}~i~\text{of the trace}
-\}
-\]
-The definitions of terminating, diverging, and aborting traces are the same as they were in previous definitions of the trace semantics.
-\end{definition}
-
-\section{Control Flow Integrity}
-
-Let's return to our problem with untrusted advertising code.
-Now that the language $\asprg$ is written in can make indirect jumps, what could go wrong? Assuming that we are using SFI to enforce a sandboxing policy, there is still no way for $\asprg$ to read or write memory outside the sandbox. Is this true? Consider the following situation, where we can assume that SFI has been applied to the untrusted $\asprg$ starting at command 20.
-\[
-\begin{array}{l}
-\phantom{\asprg\Big\{\ }
-\begin{array}{ll}
-& \vdots \\
-\keywordfont{10:} & \pumod{z}{\pderef{x}} \\
-\keywordfont{11:} & \pifjump{i\ge0}{y} \\
-& \vdots \\
-\end{array}
-\\
-\asprg\left\{
-\begin{array}{ll}
-\keywordfont{20:} & \pumod{i}{0} \\
-\keywordfont{21:} & \pumod{x}{\textit{attacker's desired address}} \\
-\keywordfont{22:} & \pumod{y}{24} \\
-\keywordfont{23:} & \pifjump{0=0}{10} \\
-\keywordfont{24:} & \textit{copy memory contents from}~z~ \\
-& \vdots \\
-\end{array}
-\right.
-\end{array}
-\]
-Here, our original program (not the untrusted $\asprg$) dereferences memory and makes use of indirect control flow transfer. More specifically,
-\begin{enumerate}
-\item At command 10, it dereferences memory on the variable $x$ and stores the result into $z$. Because this command is not in the untrusted portion $\asprg$, it was not rewritten with SFI and can readily access memory outside the sandbox.
-\item At command 11, the program tests $i\ge0$, and if the test holds then jumps to whatever command is currently in $y$.
-\item The untrusted code sets up the program state: \emph{(i)} the indirect jump at 11 will occur by setting $i:=0$ on line 20; \emph{(ii)} the indirect jump at line 11 will return control to $\asprg$ by setting $y:=24$; \emph{(iii)} setting $x:=\ldots$ at 21 so that the address read at line 10 will be whatever the attacker wants, presumably outside the sandbox bounds.
-\item The command at 23 then executes an indirect jump on a trivial test, targeting 10 so that the attacker's choice of memory is read and control returns to $\asprg$ after the indirect jump at 11.
-\end{enumerate}
-To summarize, the attacker identifies a sequence of commands in the trusted portion of the program, and sets things up in a way so that unauthorized memory is copied into a variable that the attacker can later access once control is returned to the untrusted code. This should remind you of a \emph{return-oriented programming} (ROP) attacks~\cite{Hovav07} that you learned about in 15-213. If we assume that the attacker knows the text of our program, then it is possible for them to identify ``gadgets'' in \emph{code that we wrote} to do their bidding. But this crucially relies on the ability to change control flow using indirection so that commands are executed in the order needed by the attacker to carry out their goals.
-
-\subsection{Coarse-grained safety}
-How can we prevent this? One idea is to use the same approach as we did for SFI. In that case, we designed a sandbox between memory address $s_l$ and $s_h$, and then rewrote the indices in all memory operations to ensure that accesses stayed within those bounds. Perhaps we can do a very similar thing here, by assigning a ``code sandbox'' between commands at $\pc_l$ and $\pc_h$. Then we can rewrite indirect jump commands to ensure that their target always lies within these bounds.
-\begin{equation}
-\textit{Rewrite all}~~\pifjump{\ivr}{\astrm}~~\textit{commands as}~~\pifjump{\ivr}{(\astrm \bitand \pc_h) \bitor \pc_l}
-\end{equation}
-This is a form of \emph{control flow integrity} (CFI)~\cite{Abadi2009}, a technique for enforcing a broad class of safety properties that place limits on the allowed control flow paths in a program.
-As long as we choose $\pc_l$ and $\pc_h$ to satisfy similar conditions as those used in Theorem~\ref{thm:sfi-correctness}, i.e.
-\begin{equation}
-0 \le \pc_l \le (\astrm \bitand \pc_h) \bitor \pc_l \le \pc_h \le n
-\end{equation}
-then we can ensure that the untrusted code will never jump out of its sandbox. This seems to address our concerns with the advertising scenario, when everything untrusted resides in a well-specified region of code known in advance.
-
-\subsection{Finer-grained control-flow safety}
-But what if this isn't the case? In the next lecture, we will look at a generalization of the course-grained CFI technique outlined here that gives us more control over the control-flow policy to enforce. We will then see how this is really just a special case of a powerful technique called \emph{inlined reference monitoring}, which encompasses SFI, CFI, and pretty much any safety policy that can be enforced at runtime.
 
 \begin{figure}
 \fbox{
