--- a/lectures/08-irm.tex
+++ b/lectures/08-irm.tex
@@ -6,7 +6,7 @@
 \newcommand{\leccourse}{Software Foundations of Security and Privacy}
 \newcommand{\lecdate}{} %e.g. {October 21, 2013}
 \newcommand{\lecnum}{8}
-\newcommand{\lectitle}{Control Flow Safety \& Security Automata}
+\newcommand{\lectitle}{Control Flow Safety}
 \newcommand{\lecturer}{Matt Fredrikson}
 \newcommand{\lecurl}{https://15316-cmu.github.io/index}
 
@@ -317,214 +317,6 @@ As long as we choose $\pc_l$ and $\pc_h$ to satisfy similar conditions as those 
 \end{equation}
 then we can ensure that the untrusted code will never jump out of its sandbox. This seems to address our concerns with the advertising scenario, when everything untrusted resides in a well-specified region of code known in advance.
 
-\subsection{Finer-grained control-flow safety}
-But what if this isn't the case? Suppose that we want to enforce other invariants on untrusted code, such as that they do not modify a protected variable under certain conditions. So for example if $x$ is negative, then we want to jump over any assignment to $x$. We make the following replacements, among others:
-\begin{center}
-\begin{tabular}{lcl}
-$
-\begin{array}{ll}
-\keywordfont{i:} & x := \astrm
-\end{array}
-$
-&
-\ \ \ \ becomes\ \ \ \ 
-&
-$
-\begin{array}{rl}
-\keywordfont{i:} & \pifjump{x < 0}{i+2} \\
-\keywordfont{i+1:} & x := \astrm
-\end{array}
-$
-\end{tabular}
-\end{center}
-Now if we use the coarse-grained CFI policy from before, can we actually enforce the policy using this approach? It would seem not, at least as long as the attacker knows that this is how we will attempt to do so. The problem arises because of the fact that according to the coarse-grained CFI policy, any address in the untrusted code is an allowed target of a jump. So it is perfectly acceptable (according to the coarse-grained policy) for the attacker to jump directly past the inlined check.
-
-To see this more concretely, consider the following proof-of-concept attack code. Suppose that the attacker wants to set $x$ to 0 regardless of what its value is before the untrusted code executes. This obviously violates the policy, and to accomplish it the attacker will provide a program that takes the inline enforcement code into account. So after providing the code on the left,
-\begin{center}
-\begin{tabular}{lcl}
-$
-\begin{array}{rl}
-\keywordfont{i-1:} & \pifjump{0=0}{i+1} \\
-\keywordfont{i:} & x := 0
-\end{array}
-$
-&
-\ \ \ \ becomes\ \ \ \ 
-&
-$
-\begin{array}{rl}
-\keywordfont{i-1:} & \pifjump{0=0}{(i+1 \bitand s_h) \bitor s_l} \\
-\keywordfont{i:} & \pifjump{x < 0}{i+2} \\
-\keywordfont{i+1:} & x := 0
-\end{array}
-$
-\end{tabular}
-\end{center}
-In short, the attacker sets up the program to jump directly over the enforcement code.
-
-\paragraph{Enforcing the control flow graph.} To address this, we can rely on the control flow graph (CFG) of the untrusted code. Recall from lecture 5 that a program's CFG is a graph that encodes all of the possible valid transitions between commands in the program. In this case, we will obtain a control flow graph for the original untrusted program\footnote{Obtaining the CFG for an arbitrary program with indirect jumps is a difficult problem indeed. It may not always be possible to do so, and we will come back to this in later lectures. For now, we will just assume that we have obtained the correct CFG for $\asprg$ by some unknown means.}, and ensure that the program instrumented with inline safety checks follows the same CFG modulo any checks.
-
-So in this case, the original control flow graph is given on the left of the diagram below. Obviously it is not the case that $0 \ne 0$, so the edge from \keywordfont{i-1} to \keywordfont{i} is never taken. After the invariant instrumentation is inserted, the correct translation of the control flow, preserving the relative edges from the original CFG, is shown on the right. The instrumentation replaced the instruction originally at \keywordfont{i} with an inline check, and shifted all of the subsequent instructions up by one address. So this moves \keywordfont{i} to \keywordfont{i+1}, and \keywordfont{i+1} to \keywordfont{i+2}. To make this clear in the diagram, the nodes and edges corresponding to instrumentation are marked in blue.
-\begin{center}
-\begin{tikzpicture}
-[
-  highlight/.style={draw=blue, text=blue},
-  shorten >=1pt,
-  node distance=2cm,
-  on grid,
-  auto,
-  /tikz/initial text={},
-  font=\footnotesize,
-  thick
-]
- \node[state,initial above,inner sep=1pt,minimum size=0.75cm] (l0)  {\keywordfont{i-1}};
- \node[state,inner sep=1pt,minimum size=0.75cm,yshift=1em] (l1) [below=of l0] {\keywordfont{i}};
- \node[state,inner sep=1pt,minimum size=0.75cm,yshift=1em] (l2) [below=of l1] {\keywordfont{i+1}};
- \node[state,draw=none,inner sep=1pt,minimum size=0.75cm,yshift=3.15em] (l3) [below=of l2] {};
-
-  \path[->] 
-    (l0) edge node [right] {$0 \ne 0$} (l1)
-    (l1) edge node [right] {} (l2)
-    (l0) edge [bend right] node [left] {$0 = 0$} (l2);
-\end{tikzpicture}
-\hspace{3em}
-\begin{tikzpicture}
-[
-  highlight/.style={draw=blue, text=blue},
-  shorten >=1pt,
-  node distance=2cm,
-  on grid,
-  auto,
-  /tikz/initial text={},
-  font=\footnotesize,
-  thick
-]
- \node[state,initial above,inner sep=1pt,minimum size=0.75cm] (l0)  {\keywordfont{i-1}};
- \node[state,fill=blue!30,inner sep=1pt,minimum size=0.75cm,yshift=1em] (l1) [below=of l0] {\keywordfont{i}};
- \node[state,inner sep=1pt,minimum size=0.75cm,yshift=1em] (l2) [below=of l1] {\keywordfont{i+1}};
- \node[state,inner sep=1pt,minimum size=0.75cm,yshift=1em] (l3) [below=of l2] {\keywordfont{i+2}};
-
-  \path[->] 
-    (l0) edge node [right] {$0 \ne 0$} (l1)
-    (l1) edge [blue] node [right] {$x \ge 0$} (l2)
-    (l0) edge [bend right] node [left] {$0 = 0$} (l3)
-    (l1) edge [blue,bend left=70] node [right] {$x < 0$} (l3)
-    (l2) edge node [right] {} (l3);
-\end{tikzpicture}
-\end{center}
-Now to correctly enforce the safety policy that the CFG on the right is respected by the code, the original jumps are rewritten accordingly.
-\[
-\begin{array}{rl}
-\keywordfont{i-1:} & \pifjump{0=0}{i+2} \\
-\keywordfont{i:} & \pifjump{x < 0}{i+2} \\
-\keywordfont{i+1:} & x := 0
-\end{array}
-\]
-By enforcing the original control flow of the program, after taking any added instrumentation into account with dealing with instruction addresses, we prevented the attacker from bypassing our inlined safety policy enforcement. But notice that it didn't really matter what control flow graph we started out with. It could have been arbitrary, perhaps completely different from the actual CFG of the original program, and we could still enforce it by inserting and replacing conditional jumps.
-
-\section{Security automata}
-
-The point mentioned at the end of the previous section raises some interesting possibilities. What if we want to enforce a more general safety property that takes aspects of control flow and program state into account? For example, suppose that our language from the previous two sections has the ability to make three types of system calls, \psend and \precv from the network and \pread from a local file. Then we quite naturally might want to enforce a safety policy on untrusted code which says that \psend cannot be called after \pread.
-
-We can encode such a policy using a \emph{security automaton}~\cite{Schneider2000}. Depicted below is a security automaton for the safety policy ``no send after read''. The states are abstract in the sense that they do not reflect anything about the state of the program or what it is currently doing. Rather, they represent the state at which the policy is currently in. The transitions reflect facts about program state that must be true in order for the automaton to transition. In this case, $\pc$ denotes the current program counter, and $\pcderef$ its contents. So for example $\pcderef \ne \pread$ corresponds to states in which the current instruction pointed to by the program counter is not a network read \pread.
-\begin{center}
-\scalebox{1.2}{%
-\begin{tikzpicture}
-[
-  highlight/.style={draw=blue, text=blue},
-  shorten >=1pt,
-  node distance=2cm,
-  on grid,
-  auto,
-  /tikz/initial text={},
-  font=\footnotesize,
-  thick
-]
- \node[state,thick,initial left,inner sep=1pt,minimum size=0.75cm] (l0) {};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm] (l1) [right=3cm of l0] {};
-
-  \path[->] 
-    (l0) edge [thick,loop above] node [above] {$\pcderef \ne \pread$} (l0)
-    (l0) edge [thick] node [above] {$\pcderef = \pread$} (l1)
-    (l1) edge [thick,loop above] node [above] {$\pcderef \ne \psend$} (l1);
-\end{tikzpicture}
-}
-\end{center}
-Notice that the only arrow going out of the rightmost state is a self-loop labeled $\pcderef \ne \psend$. There are no accepting states in a security automaton, and the way to interpret them is that as long as the automaton can transition from some arrow in its current state, then the policy has not been violated. So in this case, if the current policy state were the rightmost one, and the program entered into a state where $\pcderef = \psend$, then there would be no arrow to transition from and the policy would become violated.
-
-Another way to think about it is that there is a ``hidden'' error state which corresponds to the policy being violated. Every node has a transition to the error state on the condition that is the negation of all other outgoing transitions from that state, as shown in the diagram below.
-\begin{center}
-\scalebox{1}{%
-\begin{tikzpicture}
-[
-  highlight/.style={draw=blue, text=blue},
-  shorten >=1pt,
-  node distance=2cm,
-  on grid,
-  auto,
-  /tikz/initial text={},
-  font=\footnotesize,
-  thick
-]
- \node[state,thick,inner sep=1pt,minimum size=0.75cm] (l0) {};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm,yshift=2cm] (l1) [right=3.5cm of l0] {};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm] (l2) [below=1cm of l1] {};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm,draw=none] (l3) [right=3.5cm of l0] {\vdots};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm,yshift=-2cm] (l5) [right=3.5cm of l0] {};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm] (l4) [above=1cm of l5] {};
- \node[state,thick,inner sep=1pt,minimum size=0.75cm,fill=red] (l6) [left=3.5cm of l0] {$\errstate$};
-
-  \path[->] 
-    (l0) edge [thick] node [below] {$P_1$} (l1)
-    (l0) edge [thick] node [below] {$P_2$} (l2)
-    (l0) edge [thick] node [below,xshift=1ex] {$P_{n-1}$} (l4)
-    (l0) edge [thick] node [below] {$P_{n}$} (l5)
-    (l0) edge [thick] node [above] {$\lnot(P_1 \lor \cdots \lor P_n)$} (l6);
-\end{tikzpicture}
-}
-\end{center}
-These definitions are equivalent, and we will continue using the convention that does not explicitly list the error state as this will reduce clutter in our diagrams.
-
-\subsection{Enforcing security automata policies}
-
-The primary means of enforcing policies defined using security automata is with a \emph{reference monitor} (RM). The RM is a mechanism that examines the program as it executes, using information about the current and past states to decide whether the policy has been violated. This is done according to Definition~\ref{def:sa}, and was sketched out at the beginning of this section.
-
-\begin{definition}[Security automaton enforcement]
-\label{def:sa}
-Let $S$ be the current set of states that the security automaton is in, and $\delta(S,\omega)$ be a transition function that specifies a new set of states to enter given $S$ and program state $\omega$. Then for each step that the program is about to take resulting in new state $\omega$, the reference monitor  does one of two things.
-\begin{enumerate}
-\item If the automaton can transition, i.e. $\delta(S,\omega) \ne \emptyset$, then the program is allowed to enter state $\omega$ and the automaton updates its current states to $\delta(S,\omega)$.
-\item If the automaton cannot transition, i.e. $\delta(S,\omega) = \emptyset$, then the program is not allowed to enter state $\omega$ and the reference monitor takes remedial action.
-\end{enumerate}
-\end{definition}
-
-As long as the policy is not violated, then the RM allows the program to continue executing as it otherwise would. If the policy is violated, then the RM intervenes on the program execution to take some remedial action. This could mean simply aborting the execution, or something less drastic that prevents harm in other ways.
-
-\paragraph{Necessary assumptions.} As pointed out by Schneider in his seminal work on security automata~\cite{Schneider2000}, there are several assumptions that one must make in order to enforce these policies effectively with a reference monitor. First, the reference monitor needs to simulate the execution of the automaton as the program runs, so it must keep track of which state the policy is in on the actual hardware running the program. This means that the automaton cannot require an unbounded amount of memory, so automata that have an infinite number of states are not in general enforceable.
-
-Second, the RM must be able to prevent the program from entering a state that would result in a policy violation. This is called \emph{target control}, and is a more subtle issue that it may at first seem. Take for example the policy of ``real-time'' availability, which states that a principal should not be denied a resource for more than $n$ real-time seconds. How could a reference monitor enforce this policy? It might try to predict the amount of time that it takes to remediate a trace that is about to violate the policy, and take action earlier than necessary to prevent the violation. But how does it know that the policy would have actually been violated in this case? Unless the reference monitor can literally stop time, this is not an enforceable policy.
-
-Third, the program under enforcement must not be able to intervene directly on the state of the reference monitor. This is called \emph{enforcement mechanism integrity}, and is crucial for ensuring that the policy defined by the automaton is the one that is actually enforced on the target program. We dealt with an instance of this issue earlier in the lecture, when we used control flow integrity to make sure that inlined safety checks weren't bypassed by indirect jumps. But now that the policy itself has state, the enforcement mechansim must also guarantee that the target program does not make changes to that state or influence it in any way that doesn't follow the automaton transitions.
-
-\paragraph{Inline SA enforcement.} One approach to implementing security automata enforcement uses inlined checks to update and maintain state set aside to simulate the automaton. If we assume that formulas on SA transitions are formulas over program states, and there are $N$ security automata states, then we can set aside a region of $N$ memory cells at addresses $a_{\textit{sa}}$ through $a_{\textit{sa}}+N$ to hold the current state of the automaton. If $\pderef{a_{\textit{sa}}+i}$ is non-zero, then we assume that the automaton has entered into state $i$, and otherwise not.
-
-Next we need to implement the transition function, updating the contents of $\pderef{a_{\textit{sa}}} - \pderef{a_{\textit{sa}}+N}$ to simulate the automaton. Suppose that the automaton has an edge from states $i$ to $j$ labeled with formula $\ausfml$. Then for each instruction in the program we compute the verification condition of (\ref{eq:savc}).
-\begin{equation}
-\label{eq:savc}
-\dbox{\asprg}{\ausfml}
-\end{equation}
-If (\ref{eq:savc}) is satisfiable before executing $\asprg$, then it means that there may be a trace where $P$ is true after executing $\asprg$. This means that we need to insert instrumentation immediately before $\asprg$ that checks $\pderef{a_{\textit{sa}}+i} \ne 0 \land \dbox{\asprg}{\ausfml}$, and if it is true then sets $\pderef{a_{\textit{sa}+j}}$ to a non-zero value. Then for each state $i$ in the SA, we compute similar checks for transition to the ``error state''. If $i$ has outgoing edges labeled $P_1, \ldots, P_n$, we insert a check for:
-\begin{equation}
-\pderef{a_{\textit{sa}}+i} \ne 0 \land \dbox{\asprg}{\lnot(P_1 \lor \cdots \lor P_n)}
-\end{equation}
-If this check passes, it means that the automaton cannot transition from state $i$. If this holds for every state in the automaton, then the instrumentation aborts execution.
-
-The instrumentation described so far only addresses updates to the SA state. We must also take steps to ensure the integrity of the inlined mechanism, and there are two sources of vulnerability.
-\begin{itemize}
-\item The contents of $\pderef{a_{\textit{sa}}} - \pderef{a_{\textit{sa}}+N}$ must not be modified by any part of the program except the inserted instrumentation. Applying software fault isolation to the untrusted instructions can ensure that this aspect of integrity holds.
-\item The inserted instrumentation could be subverted by indirect control flow. Enforcing CFI on the untrusted code using the original control flow graph ensures that this will not happen.
-\end{itemize}
-This is sufficient to implement a basic inlined security automaton enforcement mechanism. However, it may impose a severe performance overhead due to all the safety checks. There are ways of mitigating this downside that rely on static analysis and techniques from compiler optimization, but they are outside the scope of this class. 
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
