--- a/lectures/11-flowtypes1.tex
+++ b/lectures/11-flowtypes1.tex
@@ -70,7 +70,7 @@ where $\omega_1$ and $\omega_2$ range over the set of possible program states.
 
 Equation~\ref{eq:noninterference} captures the idea that whatever the values of high-security variables labeled \hisec may be, they should not influence the values that the low-security values labeled \lowsec variables take when the program terminates. If such influence exists, then the program does \emph{not} satisfy non-interference. In this way, non-interference equates information flow with the tendency of one variable to influence that of another.
 
-Today we will dive deeper into information flow. We will start by squaring away some preliminaries, namely how the big-step transition relation is defined for our simple imperative language. Then we will introduce a type system that is able to enforce Definition~\ref{def:nonint} with respect to a particular typing context. That is, only programs that satisfy non-interference can be typed according to this system. Along the way we'll generalize the set of security labels that are allowed to appear in the typing context $\Gamma$, to allow for richer policies that just labeling variables as either \hisec or \lowsec.
+Today we will dive deeper into information flow. We will start by squaring away some preliminaries, namely how the big-step transition relation is defined for our simple imperative language. Then we will introduce a type system~\cite{Volpano1996} that is able to enforce Definition~\ref{def:nonint} with respect to a particular typing context. That is, only programs that satisfy non-interference can be typed according to this system. Along the way we'll generalize the set of security labels that are allowed to appear in the typing context $\Gamma$, to allow for richer policies that just labeling variables as either \hisec or \lowsec.
 
 \section{Big-step semantics}
 
