--- a/lectures/20-authlogic.tex
+++ b/lectures/20-authlogic.tex
@@ -192,9 +192,9 @@ So how do we relate the judgements $(\says{A}{\ausfml})~\strue$ and $\aff{A}{\au
 \cinferenceRule[saysr|SaysR]{saysr}
 {\linferenceRule[sequent]
   {
-    \lsequent{\Gamma}{\aff{A}{\ausfml},\Delta}
+    \lsequent{\Gamma}{\aff{A}{\ausfml}}
   }
-  {\lsequent{\Gamma}{(\says{A}{\ausfml})~\strue},\Delta}
+  {\lsequent{\Gamma}{(\says{A}{\ausfml})~\strue}}
 }{}%
 \]
 The rule \irref{saysr} tells us how to reason when $\says{A}{\ausfml}$ is on the right side of a sequent, and our goal is to prove the truth of such a statement. The reasoning principle embodied in this rule obliges that in order to prove $\says{A}{\ausfml}$ under $\Gamma$, we must prove $\aff{A}{\ausfml}$ under $\Gamma$.
@@ -209,9 +209,9 @@ We certainly do not want to admit proofs of $\lfalse~\strue$, and requiring that
 \cinferenceRule[saysl|SaysL]{saysl}
 {\linferenceRule[sequent]
   {
-    \lsequent{\Gamma,\ausfml~\strue}{\aff{A}{\busfml},\Delta}
+    \lsequent{\Gamma,\ausfml~\strue}{\aff{A}{\busfml}}
   }
-  {\lsequent{\Gamma,(\says{A}{\ausfml})~\strue}{\aff{A}{\busfml}},\Delta}
+  {\lsequent{\Gamma,(\says{A}{\ausfml})~\strue}{\aff{A}{\busfml}}}
 }{}%
 \]
 Now we have left and right rules for \verb'says' formulas. Looking at them together, we can see that their premises work together in a useful way that lets us reason about the affirmations of a principal. Namely, if $\lsequent{\Gamma}{\aff{A}{\ausfml}}$ and $\lsequent{\Gamma,A~\strue}{\aff{A}{\busfml}}$, then the rules let us reason that $\lsequent{\Gamma}{\aff{A}{\busfml}}$. This should remind you of the \irref{cut} rule from propositional sequent calculus earlier in the semester, as it captures similar reasoning for affirmations.
@@ -221,9 +221,9 @@ Finally, we must address the question of when it is appropriate to conclude that
 \cinferenceRule[aff|Aff]{aff}
 {\linferenceRule[sequent]
   {
-    \lsequent{\Gamma}{\ausfml~\strue,\Delta}
+    \lsequent{\Gamma}{\ausfml~\strue}
   }
-  {\lsequent{\Gamma}{\aff{A}{\ausfml},\Delta}}
+  {\lsequent{\Gamma}{\aff{A}{\ausfml}}}
 }{}%
 \]
 Together with \irref{saysl} and \irref{saysr}, \irref{aff} gives us everything necessary to reason about authorization formulas.
@@ -288,14 +288,14 @@ In principle there is nothing to prevent us from adding conjunction, disjunction
 \cinferenceRule[id|id]{identity}
 {\linferenceRule[sequent]
   {}
-  {\lsequent[L]{\asfml~\strue}{\asfml~\strue}}
+  {\lsequent{\asfml~\strue}{\asfml~\strue}}
 }{}%
 \\
 \cinferenceRule[implyl|$\limply$\leftrule]{$\limply$ left}
 {\linferenceRule[sequent]
-  {\lsequent[L]{}{\asfml~\strue}
-    & \lsequent[L]{\bsfml~\strue}{}}
-  {\lsequent[L]{(\asfml \limply \bsfml)~\strue}{}}
+  {\lsequent{}{\asfml~\strue}
+    & \lsequent{\bsfml~\strue}{}}
+  {\lsequent{(\asfml \limply \bsfml)~\strue}{}}
 }{}%
 \\
 \cinferenceRule[allr|$\forall$\leftrule]{forall left}
@@ -307,9 +307,9 @@ In principle there is nothing to prevent us from adding conjunction, disjunction
 \cinferenceRule[saysl|SaysL]{saysl}
 {\linferenceRule[sequent]
   {
-    \lsequent{\Gamma,\ausfml~\strue}{\aff{A}{\busfml},\Delta}
+    \lsequent{\Gamma,\ausfml~\strue}{\aff{A}{\busfml}}
   }
-  {\lsequent{\Gamma,(\says{A}{\ausfml})~\strue}{\aff{A}{\busfml}},\Delta}
+  {\lsequent{\Gamma,(\says{A}{\ausfml})~\strue}{\aff{A}{\busfml}}}
 }{}%
 \end{calculus}
 \quad\quad\quad\quad
@@ -324,22 +324,22 @@ In principle there is nothing to prevent us from adding conjunction, disjunction
 \\
 \cinferenceRule[implyr|$\limply$\rightrule]{$\limply$ right}
 {\linferenceRule[sequent]
-  {\lsequent[L]{\asfml~\strue}{\bsfml~\strue}}
-  {\lsequent[L]{}{(\asfml \limply \bsfml)~\strue}}
+  {\lsequent{\asfml~\strue}{\bsfml~\strue}}
+  {\lsequent{}{(\asfml \limply \bsfml)~\strue}}
 }{}%
 \\
 \cinferenceRule[allr|$\forall$\rightrule]{forall right}
 {\linferenceRule[sequent]
-  {\lsequent{\Gamma}{{}F(y)~\strue,\Delta}}
-  {\lsequent{\Gamma}{{}\forall x.F(x)~\strue,\Delta}}
+  {\lsequent{\Gamma}{{}F(y)~\strue}}
+  {\lsequent{\Gamma}{{}\forall x.F(x)~\strue}}
 }{\text{$y$ new}}
 \\
 \cinferenceRule[saysr|SaysR]{saysr}
 {\linferenceRule[sequent]
   {
-    \lsequent{\Gamma}{\aff{A}{\ausfml},\Delta}
+    \lsequent{\Gamma}{\aff{A}{\ausfml}}
   }
-  {\lsequent{\Gamma}{(\says{A}{\ausfml})~\strue},\Delta}
+  {\lsequent{\Gamma}{(\says{A}{\ausfml})~\strue}}
 }{}%
 \\
 \end{calculus}
@@ -347,9 +347,9 @@ In principle there is nothing to prevent us from adding conjunction, disjunction
 \cinferenceRule[aff|Aff]{aff}
 {\linferenceRule[sequent]
   {
-    \lsequent{\Gamma}{\ausfml~\strue,\Delta}
+    \lsequent{\Gamma}{\ausfml~\strue}
   }
-  {\lsequent{\Gamma}{\aff{A}{\ausfml},\Delta}}
+  {\lsequent{\Gamma}{\aff{A}{\ausfml}}}
 }{}%
 \end{minipage}
 }
